--- a/src/html/pages/components/buttons.hbs
+++ b/src/html/pages/components/buttons.hbs
@@ -1,8 +1,8 @@
 ---
 title: Buttons
 description: Buttons. You click on them. They do stuff.
+category: Components
 ---
-
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
@@ -19,20 +19,20 @@ description: Buttons. You click on them. They do stuff.
   {{#embed "styleguide/article" title="Default w/ Icon and Label"}}
   {{#content "body"}}
     <button class="c-button c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#group"/></svg>
       <span class="c-button__text">Button</span>
     </button>
     <a href="#" class="c-button c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#group"/></svg>
       <span class="c-button__text">Link</span>
     </a>
 
     <button class="c-button c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text">Button</span>
     </button>
     <a href="#" class="c-button c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text">Link</span>
     </a>
   {{/content}}
@@ -42,20 +42,20 @@ description: Buttons. You click on them. They do stuff.
   {{#embed "styleguide/article" title="Default w/ Icon and w/o Label"}}
   {{#content "body"}}
     <button class="c-button c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#group"/></svg>
       <span class="c-button__text u-sr-only">Button</span>
     </button>
     <a href="#" class="c-button c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#group"/></svg>
       <span class="c-button__text u-sr-only">Link</span>
     </a>
 
     <button class="c-button c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text u-sr-only">Button</span>
     </button>
     <a href="#" class="c-button c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text u-sr-only">Link</span>
     </a>
   {{/content}}
@@ -75,20 +75,20 @@ description: Buttons. You click on them. They do stuff.
   {{#embed "styleguide/article" title="Highlighted w/ Icon and Label"}}
   {{#content "body"}}
     <button class="c-button c-button--highlight c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#group"/></svg>
       <span class="c-button__text">Button</span>
     </button>
     <a href="#" class="c-button c-button--highlight c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#group"/></svg>
       <span class="c-button__text">Link</span>
     </a>
 
     <button class="c-button c-button--highlight c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text">Button</span>
     </button>
     <a href="#" class="c-button c-button--highlight c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text">Link</span>
     </a>
   {{/content}}
@@ -98,20 +98,20 @@ description: Buttons. You click on them. They do stuff.
   {{#embed "styleguide/article" title="Highlighted w/ Icon and w/o Label"}}
   {{#content "body"}}
     <button class="c-button c-button--highlight c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#group"/></svg>
       <span class="c-button__text u-sr-only">Button</span>
     </button>
     <a href="#" class="c-button c-button--highlight c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#group"/></svg>
       <span class="c-button__text u-sr-only">Link</span>
     </a>
 
     <button class="c-button c-button--highlight c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text u-sr-only">Button</span>
     </button>
     <a href="#" class="c-button c-button--highlight c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#device-hub"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#device-hub"/></svg>
       <span class="c-button__text u-sr-only">Link</span>
     </a>
   {{/content}}
@@ -121,11 +121,11 @@ description: Buttons. You click on them. They do stuff.
   {{#embed "styleguide/article" title="Icon only w/o Background"}}
   {{#content "body"}}
     <button class="c-icon-button">
-      <svg class="c-icon-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+      <svg class="c-icon-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#group"/></svg>
       <span class="u-sr-only">Button</span>
     </button>
     <a href="#" class="c-icon-button">
-      <svg class="c-icon-button__icon"><use xlink:href="{{rel}}img/icons.svg#group"/></svg>
+      <svg class="c-icon-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#group"/></svg>
       <span class="u-sr-only">Link</span>
     </a>
   {{/content}}
