--- a/src/html/pages/components/dropdown.hbs
+++ b/src/html/pages/components/dropdown.hbs
@@ -1,8 +1,8 @@
 ---
 title: Dropdown
 description: Click a button and an awesome menu pops up.
+category: Components
 ---
-
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
