--- a/src/html/pages/components/footer.hbs
+++ b/src/html/pages/components/footer.hbs
@@ -1,8 +1,8 @@
 ---
 title: Footer
 description: That thing at the end of all pages.
+category: Components
 ---
-
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
