--- a/src/html/pages/components/forms.hbs
+++ b/src/html/pages/components/forms.hbs
@@ -1,8 +1,8 @@
 ---
 title: Forms
 description: Users input things. The server gets things.
+category: Components
 ---
-
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
