--- a/src/html/pages/components/header.hbs
+++ b/src/html/pages/components/header.hbs
@@ -1,8 +1,8 @@
 ---
 title: Header
 description: The Beginning of Everything.
+category: Components
 ---
-
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
