--- a/src/html/pages/components/list.hbs
+++ b/src/html/pages/components/list.hbs
@@ -1,8 +1,8 @@
 ---
 title: Lists
 description: They list domains, accounts, aliases, forwards and mailing lists.
+category: Components
 ---
-
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
