--- a/src/html/pages/components/logo.hbs
+++ b/src/html/pages/components/logo.hbs
@@ -1,8 +1,8 @@
 ---
 title: The Logo
 description: The one and the only.
+category: Components
 ---
-
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
