--- a/src/html/pages/components/nav-horizontal.hbs
+++ b/src/html/pages/components/nav-horizontal.hbs
@@ -1,8 +1,8 @@
 ---
 title: Navigation Horizontal
 description: Contains filter or actions or a title.
+category: Components
 ---
-
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
