--- a/src/html/pages/components/nav-sidebar.hbs
+++ b/src/html/pages/components/nav-sidebar.hbs
@@ -1,15 +1,15 @@
 ---
-title: Pagination
-description: If you gained so much fame, you need multiple pages for all your domains.
+title: Navigation Sidebar
+description: Context-sensitive links for additional actions.
+category: Components
 ---
-
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
 
   {{#embed "styleguide/article"}}
   {{#content "body"}}
-    {{> includes/pagination}}
+    {{> includes/nav-sidebar}}
   {{/content}}
   {{/embed}}
 
