--- a/src/html/pages/components/notification.hbs
+++ b/src/html/pages/components/notification.hbs
@@ -1,8 +1,8 @@
 ---
 title: Notification
 description: Fire alarm, severe weather and flood warning.
+category: Components
 ---
-
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
