--- a/src/html/pages/components/pagination.hbs
+++ b/src/html/pages/components/pagination.hbs
@@ -1,15 +1,15 @@
 ---
-title: Navigation Sidebar
-description: Context-sensitive links for additional actions.
+title: Pagination
+description: If you gained so much fame, you need multiple pages for all your domains.
+category: Components
 ---
-
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
 
   {{#embed "styleguide/article"}}
   {{#content "body"}}
-    {{> includes/nav-sidebar}}
+    {{> includes/pagination}}
   {{/content}}
   {{/embed}}
 
