--- a/src/html/pages/index.hbs
+++ b/src/html/pages/index.hbs
@@ -1,14 +1,15 @@
 ---
 title: Login
+description:
+category: Pages
 ---
-
 {{#extend "layouts/pages"}}
 {{#content "body"}}
 
   <div class="l-login">
     <div class="l-login__logo">
       <div class="c-logo c-logo--dark">
-        <svg class="c-logo__icon"><use xlink:href="{{rel}}img/logo.svg#logo"/></svg>
+        <svg class="c-logo__icon"><use xlink:href="{{page 'rel'}}img/logo.svg#logo"/></svg>
         <span class="c-logo__text">MailAdmin</span>
       </div>
     </div>
