--- a/src/html/partials/includes/dropdown-icon-and-text.hbs
+++ b/src/html/partials/includes/dropdown-icon-and-text.hbs
@@ -1,11 +1,11 @@
-<div class="c-dropdown  js-dropdown">
-  <button class="c-button c-button--icon  c-dropdown__button  js-toggle-button">
-    <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#account"/></svg>
+<div class="c-dropdown js-dropdown">
+  <button class="c-button c-button--icon c-dropdown__button js-toggle-button">
+    <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#account"/></svg>
     <span class="c-button__text">Dropdown</span>
-    <svg class="c-dropdown__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
+    <svg class="c-dropdown__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#dropdown"/></svg>
   </button>
 
-  <div class="c-dropdown__panel c-dropdown__panel--menu  js-toggle-panel">
+  <div class="c-dropdown__panel c-dropdown__panel--menu js-toggle-panel">
     <ul class="c-dropdown__list">
       <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
       <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
@@ -18,14 +18,14 @@
 </div>
 
 
-<div class="c-dropdown  js-dropdown">
-  <button class="c-button c-button--icon  c-dropdown__button  js-toggle-button">
-    <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#account"/></svg>
+<div class="c-dropdown js-dropdown">
+  <button class="c-button c-button--icon c-dropdown__button js-toggle-button">
+    <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#account"/></svg>
     <span class="c-button__text">Dropdown</span>
-    <svg class="c-dropdown__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
+    <svg class="c-dropdown__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#dropdown"/></svg>
   </button>
 
-  <div class="c-dropdown__panel c-dropdown__panel--to-left c-dropdown__panel--menu  js-toggle-panel">
+  <div class="c-dropdown__panel c-dropdown__panel--to-left c-dropdown__panel--menu js-toggle-panel">
     <ul class="c-dropdown__list">
       <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
       <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
