--- a/src/html/partials/includes/header-notification-error.hbs
+++ b/src/html/partials/includes/header-notification-error.hbs
@@ -14,14 +14,14 @@
   </div>
 
   <div class="c-action-bar__group">
-    <div class="c-dropdown  js-dropdown">
-      <button class="c-button c-button--icon  c-dropdown__button  js-toggle-button">
-        <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#account"/></svg>
-        <span class="c-button__text  u-sr-only">Dropdown</span>
-        <svg class="c-dropdown__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
+    <div class="c-dropdown js-dropdown">
+      <button class="c-button c-button--icon c-dropdown__button js-toggle-button">
+        <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#account"/></svg>
+        <span class="c-button__text u-sr-only">Dropdown</span>
+        <svg class="c-dropdown__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#dropdown"/></svg>
       </button>
 
-      <div class="c-dropdown__panel c-dropdown__panel--to-left c-dropdown__panel--menu  js-toggle-panel">
+      <div class="c-dropdown__panel c-dropdown__panel--to-left c-dropdown__panel--menu js-toggle-panel">
         <ul class="c-dropdown__list">
           <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
           <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
@@ -36,7 +36,7 @@
 
   <div class="c-action-bar__group">
     <button class="c-button c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#power"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#power"/></svg>
       <span class="c-button__text u-sr-only">Log off</span>
     </button>
   </div>
