--- a/src/html/partials/includes/logo-standalone.hbs
+++ b/src/html/partials/includes/logo-standalone.hbs
@@ -1,4 +1,4 @@
 <a href="#" class="c-logo c-logo--dark">
-  <svg class="c-logo__icon"><use xlink:href="{{rel}}img/logo.svg#logo"/></svg>
+  <svg class="c-logo__icon"><use xlink:href="{{page 'rel'}}img/logo.svg#logo"/></svg>
   <span class="c-logo__text">MailAdmin</span>
 </a>
