--- a/src/html/partials/includes/notification-error.hbs
+++ b/src/html/partials/includes/notification-error.hbs
@@ -1,6 +1,6 @@
 <div class="c-notification c-notification--error">
   <div class="c-notification__group">
-    <svg class="c-notification__icon"><use xlink:href="{{rel}}img/icons.svg#error"/></svg>
+    <svg class="c-notification__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#error"/></svg>
   </div>
 
   <div class="c-notification__group c-notification__group--flexible">
@@ -10,7 +10,7 @@
 
   <div class="c-notification__group">
     <button class="c-icon-button c-icon-button--light">
-      <svg class="c-icon-button__icon"><use xlink:href="{{rel}}img/icons.svg#close"/></svg>
+      <svg class="c-icon-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#close"/></svg>
     </button>
   </div>
 </div>
