--- a/src/html/pages/aliases.hbs
+++ b/src/html/pages/aliases.hbs
@@ -1,7 +1,8 @@
 ---
 title: Aliases
+description:
+category: Pages
 ---
-
 {{#extend "layouts/pages"}}
 {{#content "body"}}
 
@@ -12,8 +13,8 @@ title: Aliases
 
     <div class="l-container__content">
 
-      <div class="c-nav-sidebar-cover  js-sidebar-cover"></div>
-      <aside class="l-container__sidebar  js-sidebar">
+      <div class="c-nav-sidebar-cover js-sidebar-cover"></div>
+      <aside class="l-container__sidebar js-sidebar">
         {{> includes/nav-sidebar}}
       </aside>
 
