--- a/src/html/pages/components/box.hbs
+++ b/src/html/pages/components/box.hbs
@@ -1,8 +1,8 @@
 ---
 title: Box
 description: Three letters for a very versatile thingy.
+category: Components
 ---
-
 {{#extend "layouts/components"}}
 {{#content "body"}}
 
