--- a/src/html/partials/includes/dropdown-text.hbs
+++ b/src/html/partials/includes/dropdown-text.hbs
@@ -1,10 +1,10 @@
-<div class="c-dropdown  js-dropdown">
-  <button class="c-button  c-dropdown__button  js-toggle-button">
+<div class="c-dropdown js-dropdown">
+  <button class="c-button c-dropdown__button js-toggle-button">
     Dropdown
-    <svg class="c-dropdown__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
+    <svg class="c-dropdown__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#dropdown"/></svg>
   </button>
 
-  <div class="c-dropdown__panel c-dropdown__panel--menu  js-toggle-panel">
+  <div class="c-dropdown__panel c-dropdown__panel--menu js-toggle-panel">
     <ul class="c-dropdown__list">
       <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
       <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
@@ -17,13 +17,13 @@
 </div>
 
 
-<div class="c-dropdown  js-dropdown">
-  <button class="c-button  c-dropdown__button  js-toggle-button">
+<div class="c-dropdown js-dropdown">
+  <button class="c-button c-dropdown__button js-toggle-button">
     Dropdown
-    <svg class="c-dropdown__icon"><use xlink:href="{{rel}}img/icons.svg#dropdown"/></svg>
+    <svg class="c-dropdown__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#dropdown"/></svg>
   </button>
 
-  <div class="c-dropdown__panel c-dropdown__panel--to-left c-dropdown__panel--menu  js-toggle-panel">
+  <div class="c-dropdown__panel c-dropdown__panel--to-left c-dropdown__panel--menu js-toggle-panel">
     <ul class="c-dropdown__list">
       <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
       <li class="c-dropdown__item"><a href="#" class="c-dropdown__link">This is a dropdown menu list item</a></li>
