--- a/src/html/partials/includes/nav-horizontal-filter.hbs
+++ b/src/html/partials/includes/nav-horizontal-filter.hbs
@@ -1,7 +1,7 @@
 <div class="c-action-bar">
-  <div class="c-action-bar__group  u-hide-lg u-hide-xl">
-    <button class="c-icon-button  js-sidebar-button">
-      <svg class="c-icon-button__icon"><use xlink:href="{{rel}}img/icons.svg#menu"/></svg>
+  <div class="c-action-bar__group u-hide-lg u-hide-xl">
+    <button class="c-icon-button js-sidebar-button">
+      <svg class="c-icon-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#menu"/></svg>
       <span class="u-sr-only">Open Menu</span>
     </button>
   </div>
@@ -13,7 +13,7 @@
 
   <div class="c-action-bar__group">
     <button class="c-button c-button--icon">
-      <svg class="c-button__icon"><use xlink:href="{{rel}}img/icons.svg#add"/></svg>
+      <svg class="c-button__icon"><use xlink:href="{{page 'rel'}}img/icons.svg#add"/></svg>
       <span class="c-button__text  u-sr-only-xs">New Domain</span>
     </button>
   </div>
